samples/_failures_safe/1761327333_5e1697_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc7fefde.c: In function ‘main’:
./samples/SAFE/__tmp_cc7fefde.c:128:9: error: expected declaration or statement at end of input
  128 |         print_matrix((int *)result, rows1, cols2);
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_cc7fefde.c:128:9: error: expected declaration or statement at end of input
